# openclaw-installer

./: .dockerignore  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: android.yml  build.yml  sync-gitee.yml
apps/android/: settings.gradle.kts
apps/android-server/: settings.gradle.kts
apps/android-server/app/: build.gradle.kts  proguard-rules.pro
apps/android-server/app/src/main/: AndroidManifest.xml
apps/android-server/app/src/main/kotlin/com/openclaw/server/: GatewayService.kt  MainActivity.kt  NodeManager.kt
apps/android-server/app/src/main/res/values/: themes.xml
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/kotlin/com/openclaw/companion/: ConsoleScreen.kt  MainActivity.kt  ScanScreen.kt
apps/installer/: index.html  package.json  vite.config.ts
apps/installer/src/: App.tsx
apps/installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/installer/src-tauri/icons/: icon.icns
apps/installer/src-tauri/src/: lib.rs  main.rs
apps/installer/src-tauri/src/commands/: config.rs  env_detect.rs  health.rs  install_flow.rs  mod.rs  node_setup.rs  openclaw.rs  service.rs
apps/installer/src/hooks/: useInstaller.ts
apps/installer/src/pages/: ApiKey.tsx  Dashboard.tsx  Install.tsx  Progress.tsx  Uninstall.tsx
apps/installer/src/styles/: global.css
scripts/: download-node-android.sh  download-node.sh  download-nssm.sh  install.ps1  install.sh
