[package]
name = "openclaw-installer"
version = "0.1.0"
edition = "2021"

[lib]
name = "openclaw_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tar = "0.4"
xz2 = "0.1"
zip = "2"
dirs = "5"
plist = "1"
log = "0.4"
env_logger = "0.11"
open = "5"
